Update roles and permissions to use code not UUID for PK. Add roles/permissions data. Add local dev seed data.
