# app/src/forms/role/routes.js
@@ -10,11 +10,11 @@ routes.post('/', async (req, res, next) => {
   await controller.create(req, res, next);
 });
 
-routes.get('/:id', async (req, res, next) => {
+routes.get('/:code', async (req, res, next) => {
   await controller.read(req, res, next);
 });
 
-routes.put('/:id', async (req, res, next) => {
+routes.put('/:code', async (req, res, next) => {
   await controller.update(req, res, next);
 });
 
